tests/script_errors/select_ident/error.txt
Error: 
    1 | let select = event;
      |     ^^^^^^ Found the token `select` but expected one of `$`, `<ident>`, `args`, `event`, `group`, `state`, `window`
      |            NOTE: It looks like you tried to use the 'select' as a ident, consider quoting it as `select` to make it an identifier.
    2 | 
    3 | select